# ner_playground

./: .gitignore  README.md  pyproject.toml
src/ner/: main.py
